--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@ button {
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
+canvas.width = 800;
+canvas.height = 400;
+
+
 
 let gravity = 0.8;
 let jumpPower = -15;
