--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 body {
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   background: white;
   font-family: sans-serif;
   text-align: center;
@@ -16,7 +16,10 @@ body {
 canvas {
   background: #f7f7f7;
   display: block;
-  margin: 0 auto;
+  margin: 20px auto;
+  width: 100%;
+  max-width: 800px;
+  height: auto;
 }
 
 #score {
