--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <style>
 body {
   margin: 0;
-  overflow-x: hidden;
   background: white;
   font-family: sans-serif;
   text-align: center;
@@ -17,10 +16,11 @@ canvas {
   background: #f7f7f7;
   display: block;
   margin: 20px auto;
-  width: 100%;
+  width: 100vw;
   max-width: 800px;
-  height: auto;
+  aspect-ratio: 2 / 1;
 }
+
 
 #score {
   position: absolute;
@@ -271,3 +271,4 @@ update();
 
 </body>
 </html>
+
