--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,12 +15,9 @@ body {
 canvas {
   background: #f7f7f7;
   display: block;
-  margin: 20px auto;
-  width: 100vw;
-  max-width: 800px;
+  width: 100%;
   aspect-ratio: 2 / 1;
 }
-
 
 #score {
   position: absolute;
@@ -45,6 +41,14 @@ button {
   padding: 10px 20px;
   margin-top: 20px;
 }
+
+#gameWrapper {
+  position: relative;
+  width: 100vw;
+  max-width: 800px;
+  margin: 20px auto;
+}
+
 </style>
 </head>
 <body>
