--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@ canvas {
 }
 
 button {
-  font-size: 20px;
-  padding: 10px 20px;
+  font-size: 16px;
+  padding: 8px 16px;
   margin-top: 20px;
+  border-radius: 8px;
 }
 
 #gameWrapper {
@@ -51,10 +52,11 @@ button {
 
 #endingScreen {
   position: absolute;
-  top: 50%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 </style>
 </head>
 <body>
@@ -292,4 +294,3 @@ update();
 
 </body>
 </html>
-
